# invoicechain-mainnet

./: .gitguardian.yaml  .gitignore  DEPLOY.md  FEEDBACK.md  README.md  SECURITY-AUDIT.md  SUBMISSION.md
.github/workflows/: deploy-pages.yml
contracts/marketplace/: Cargo.toml
contracts/marketplace/src/: lib.rs  test.rs  types.rs
contracts/marketplace/test_snapshots/test/: buy_invoice_rejects_non_listed.1.json  buy_invoice_rejects_unknown_id.1.json  buy_invoice_transfers_discounted_price_to_seller.1.json  create_invoice_accepts_boundary_discounts.1.json  create_invoice_rejects_invalid_discount.1.json
contracts/reputation/src/: lib.rs  test.rs
contracts/test_token/: Cargo.toml
contracts/test_token/src/: lib.rs  test.rs
deployments/: mainnet.json  testnet.json
docs/: USER-GUIDE.md
docs/marketing/: blog-invoice-factoring-gasless.md  demo-gif.md  demo-video-script.md  twitter-launch-thread.md
docs/superpowers/plans/: 2026-07-02-invoicechain-contracts.md  2026-07-16-fee-sponsorship.md
docs/superpowers/specs/: 2026-07-10-level6-mainnet-launch-design.md  2026-07-10-security-audit-design.md  (+1 more)
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: pitch.html
frontend/scripts/: gen-bindings.sh
frontend/src/: App.test.tsx  App.tsx  main.tsx
scripts/: deploy_mainnet.sh  deploy_testnet.sh
sponsor-worker/: README.md  package-lock.json  package.json  vitest.config.ts  wrangler.toml
sponsor-worker/src/: index.ts  validate.ts
sponsor-worker/test/: helpers.ts  validate.test.ts  worker.test.ts
(+35 files in other folders)
